# cylinter

./: .dockerignore  .gitignore  .gitpod.yml  CITATION.cff  Dockerfile  LICENSE  README.md  ReadMe.md  convert_labels_to_seg_outlines.py  meta.yaml  pyproject.toml  requirements.txt  setup.py  temp_config.yml
.github/workflows/: dockerhub.yml
cylinter/: components.py  config.py  config.yml  cylinter.py  cylinter_config.yml  pipeline.py  prep.py  prep_subprocess.sh  start.sh  utils.py
cylinter/modules/: PCA.py  aggregateData.py  areaFilter.py  clustering.py  clustermap.py  curateThumbnails.py  cycleCorrelation.py  frequencyStats.py  gating.py  intensityFilter.py  logTransform.py  metaQC.py  pruneOutliers.py  selectROIs.py  setContrast.py
cylinter/pretrained_models/: pretrained_model.pkl  train_artifact_classifier.ipynb
docs/: CNAME  _config.yml  exemplar.md  index.md  installation.md  module_descriptions.md  running_cylinter.md  running_cytolinter.md
docs/_data/: config.yml
docs/_includes/: cite.md  community.md  cylinter_gif.html  dir.md  exec.md  exemplar.md  help.md  home.md  input.md  install.md  modules.md  output.md  run.md  workflow.md
docs/_layouts/: default-cylinter.html
docs/_sass/color_schemes/: cylinter.scss
docs/_sass/custom/: custom.scss
docs/assets/images/cores.intaglio/: Drawing
docs/assets/images/cylinter-logo.intaglio/: Drawing
docs/cite/: index.md
docs/community/: index.md
docs/exemplar/: index.md
docs/faq/: #index.md
docs/funding/: index.md
docs/help/: index.md
docs/installation/: index.md
docs/modules/: PCA.md  aggregateData.md  areaFilter.md  clustering.md  clustermap.md  curateThumbnails.md  cycleCorrelation.md  frequencyStats.md  gating.md  index.md  intensityFilter.md  logTransform.md  metaQC.md  pruneOutliers.md  selectROIs.md  setContrast.md
docs/run/: index.md
docs/structure/: index.md
docs/tutorials/: #index.md  adding.md  basics.md
docs/workflow/: index.md  input.md  output.md
recipe/: meta.yaml
src/: QC_class.py  QC_newstuff.py  QC_run.py  QC_utils.py  config.yaml  markers.csv  qc_config.yml  qc_prep.sh  replicates.yaml  requirements.txt  samples.yaml  terminal_call.sh
