[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "CyLinter"
version = "0.0.50"
description = "CyLinter: An Interactive Image Segmentation Filter for Multiplex Microscopy"
readme = "README.md"
license = "MIT"
keywords =['CyLinter multiplex microscopy quality control']
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Science/Research',
    'Framework :: napari',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Visualization'
]
authors = ["Gregory J. Baker <gregory_baker2@hms.harvard.edu>"]
homepage = "https://github.com/labsyspharm/cylinter"

[tool.poetry.dependencies]
cellcutter = "*"
hdbscan = "*"
joblib = "*"
magicgui = "*"
matplotlib = "<3.6"
napari = { version = "*", extras = ["all"] }
numpy = "*"
natsort = "*"
numba = "*"
pandas = "*"
pyarrow = "*"
pyqt = "*"
pyyaml = "*"
qtpy = "*"
scikit-image = "*"
scikit-learn = "<=1.2.2"
seaborn = "*"
tifffile = "*"
umap-learn = "*"
zarr = "*"
svglib = "*"
pypdf2 = "*"
imagecodecs = "*"
opencv-python = "*"

[tool.poetry.scripts]
cylinter = "cylinter.cylinter:main"
